--- a/06 Pandas Teil 1/01 Daten explorieren L.ipynb
+++ b/06 Pandas Teil 1/01 Daten explorieren L.ipynb
@@ -9937,59 +9937,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "state\n",
-       "Alabama           2017\n",
-       "Arizona           2017\n",
-       "Arkansas          2017\n",
-       "California        2017\n",
-       "Colorado          2010\n",
-       "Connecticut       2014\n",
-       "Delaware          2015\n",
-       "Federal           2017\n",
-       "Florida           2017\n",
-       "Georgia           2014\n",
-       "Idaho             2017\n",
-       "Illinois          2010\n",
-       "Indiana           2014\n",
-       "Kansas            2016\n",
-       "Kentucky          2014\n",
-       "Louisiana         2015\n",
-       "Maryland          2007\n",
-       "Mississippi       2015\n",
-       "Missouri          2017\n",
-       "Montana           2017\n",
-       "Nebraska          2017\n",
-       "Nevada            2017\n",
-       "New Hampshire     2008\n",
-       "New Jersey        2004\n",
-       "New Mexico        2000\n",
-       "New York          2002\n",
-       "North Carolina    2016\n",
-       "Ohio              2017\n",
-       "Oklahoma          2017\n",
-       "Oregon            2016\n",
-       "Pennsylvania      2017\n",
-       "South Carolina    2014\n",
-       "South Dakota      2014\n",
-       "Tennessee         2015\n",
-       "Texas             2017\n",
-       "U.S. Military     2013\n",
-       "Utah              1999\n",
-       "Virginia          2011\n",
-       "Washington        2013\n",
-       "Wyoming           2004\n",
-       "Name: year, dtype: int64"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-224bd098f3a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'state'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'year'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
