--- a/09 Dataviz Pandas Seaborn Plotly/01 Pandas und Visualisierung.ipynb
+++ b/09 Dataviz Pandas Seaborn Plotly/01 Pandas und Visualisierung.ipynb
@@ -2690,7 +2690,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2704,7 +2704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
